# Nyx

./: CLAUDE.md
backend/: .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
backend/http/Nyx/: workspace.yml
backend/migrations/: 20260404123432_create_users.sql  20260404161109_make_display_name_nullable.sql  20260404183419_create_refresh_tokens.sql  20260404194118_create_telescopes.sql  20260404194119_create_cameras.sql  20260404194120_create_mounts.sql  20260404194121_create_filters.sql  20260404194122_create_observing_locations.sql  20260405005300_add_unique_location_name_per_user.sql  20260405115813_create_targets.sql  20260405115815_create_tess_observations.sql  20260405135300_create_light_curve_points.sql  20260405160738_create_observation_sessions.sql  20260405170152_add_equipment_fks_to_sessions.sql  20260405170200_add_photometry_to_images.sql  20260405203747_add_email_verified_to_users.sql  20260405203750_create_verification_tokens.sql  20260405205826_add_oauth_fields_to_users.sql
backend/src/: main.cpp
backend/src/application/auth/: AuthService.cpp  AuthService.hpp  Dtos.hpp  IEmailSender.hpp  IGoogleAuthClient.hpp  IPasswordHasher.hpp  ITokenService.hpp
backend/src/application/equipment/: Dtos.hpp  EquipmentService.cpp  EquipmentService.hpp
backend/src/application/location/: Dtos.hpp  LocationService.cpp  LocationService.hpp
backend/src/application/observation/: Dtos.hpp  IDngDecoder.hpp  IExifParser.hpp  IFileStorage.hpp  IPhotometryProcessor.hpp  ObservationService.cpp  ObservationService.hpp
backend/src/application/profile/: Dtos.hpp  ProfileService.cpp  ProfileService.hpp
backend/src/core/error/: AppError.hpp
backend/src/core/logging/: Logger.cpp  Logger.hpp
backend/src/core/util/: TimeConversion.hpp  UuidGenerator.hpp
backend/src/core/validation/: RequestValidator.hpp
backend/src/domain/entities/: Camera.hpp  Filter.hpp  LightCurvePoint.hpp  Mount.hpp  ObservationImage.hpp  ObservationSession.hpp  ObservingLocation.hpp  RefreshToken.hpp  Target.hpp  Telescope.hpp  TessObservation.hpp  User.hpp  VerificationToken.hpp
backend/src/domain/repositories/: ICameraRepository.hpp  IFilterRepository.hpp  ILightCurvePointRepository.hpp  IMountRepository.hpp  IObservationImageRepository.hpp  IObservationSessionRepository.hpp  IObservingLocationRepository.hpp  IRefreshTokenRepository.hpp  ITargetRepository.hpp  ITelescopeRepository.hpp  ITessObservationRepository.hpp  IUserRepository.hpp  IVerificationTokenRepository.hpp
backend/src/infrastructure/auth/: GoogleAuthClient.cpp  GoogleAuthClient.hpp
backend/tests/: CMakeLists.txt
(+171 files in other folders)
